Use milliseconds in sleep action